[package]
name = "multi_vector"
version = "0.0.1"
authors = ["iagox86 <ron-git@skullsecurity.org>"]
edition = "2018"
description = "Multiple inter-connected vectors"
license = "MIT"
documentation = "https://github.com/h2gb/multi_vector"
homepage = "https://github.com/h2gb/multi_vector"
repository = "https://github.com/h2gb/multi_vector"
readme = "README.md"

[features]
serialize = ["serde", "ron", "bumpy_vector/serialize"]

[dependencies]
# Serialize / deserialize are disabled by default
serde = { version = "~1.0.110", optional = true }
ron   = { version = "~0.5.1",   optional = true }
simple-error = "~0.2.1"

#bumpy_vector = { path = "/home/ron/projects/bumpy_vector" }
bumpy_vector = { version = "~0.0.0", git = "https://github.com/h2gb/bumpy_vector", branch = "dev" }

[dev-dependencies]
pretty_assertions = "~0.6.1"

# This lets us use special features in our documentation
[package.metadata."docs.rs"]
all-features = true
